# sciris

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  STYLE_GUIDE.md  STYLE_GUIDE.rst  ScirisFramework.mm  code_of_conduct.md  compile  issue_1592.txt  llms.txt  note-to-editors.txt  paper.bib  paper.jats  paper.md  pyproject.toml  readthedocs.yml  requirements.txt  setup-web.py  setup.py  tox.ini  version.py
code/: CHANGELOG.rst  LICENSE  readthedocs.yml  setup.py
docs/: .gitignore  Makefile  README.md  _quarto.yml  api_reference.rst  build_docs  check_notebooks  code_documentation.rst  conduct.qmd  conf.py  contributing.qmd  contributing.rst  environment.yml  execute_notebooks  freeze_env  index.qmd  index.rst  overview.md  overview.rst  preview  publish  requirements.txt  sciris-citation.bib  tutorials.qmd  user_guide.qmd  utils.py  whatsnew.qmd
examples/: scirismain.py
misc/: README.md  plotting_example.py
sciris/: README.md  __init__.py  _twisted_wsgi.py  ansicolors.py  api.py  colortools.py  config.py  config_v1.py  core.py  dataframe.py  datastore.py  fancy.mplstyle  fileio.py  math.py  odict.py  plotting.py  project.py  sc_alias.py  sc_asd.py  sc_colors.py  sc_dataframe.py  sc_datetime.py  sc_fileio.py  sc_legacy.py  sc_math.py  sc_nested.py  sc_odict.py  sc_parallel.py  sc_plotting.py  sc_printing.py  sc_procmem.py  sc_profiling.py  sc_save_to_pptx.py  sc_settings.py  sc_utils.py  sc_version.py  sc_versioning.py  scirisapp.py  scirisobjects.py  server.py  (+6 more)
sciris2gc/: __init__.py  api.py  appcomponents.py  datastore.py  fileio.py  project.py  rpcs.py  scirisapp.py  scirisobjects.py  test_rpcs_aux.py  user.py  version.py
sciris_legacy/: api.py  core.py  fileio.py  project.py  sc.py  server.py  utils.py
scirismodel/: model.py  scirismain.py
scirisweb/: __init__.py  datastore.py  quickserver.py  sc_app.py  sc_datastore.py  sc_objects.py  sc_rpcs.py  sc_server.py  sc_tasks.py  sc_user.py  sc_users.py  scirisapp.py  scirisobjects.py  tasks.py  user.py
session_manager/: _twisted_wsgi.py
sessionmanager/: _twisted_wsgi.py  api.py  config.py  config_example.py  datastore.py  main.py  rpcs.py  scirisobjects.py  user.py
tests/: .coveragerc  README.rst  benchmark_alias.py  check_coverage  pytest.ini  requirements.txt  requirements_test.txt  run_all_tests.py  run_tests  sc_test_utils.py  showcase.py  showcase_sciris.py  showcase_spaced.py  showcase_vanilla.py  test_alias.py  test_asd.py  test_colors.py  test_dataframe.py  test_datetime.py  test_fileio.py  test_math.py  test_nested.py  (+15 more)
(+232 files in other folders)
