[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sciris"
dynamic = ["version"]
description = "Fast, flexible tools to simplify scientific Python"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["scientific Python", "utilities", "dates", "file I/O", "data structures", "dataframes", "plotting", "colormaps", "parallelization", "math", "optimization", "versioning"]

authors = [
  { name = "Sciris Development Team", email = "info@sciris.org" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy",           # Numerical functions
  "pandas",          # Dataframes and spreadsheet input
  "matplotlib",      # Plotting
  "openpyxl",        # To read Excel files; removed as a dependency of pandas as of version 1.3
  "xlsxwriter",      # Spreadsheet output
  "psutil",          # Load monitoring
  "dill",            # For pickling more complex object types
  "zstandard",       # For a more efficient compression algorithm
  "multiprocess",    # More flexible version of multiprocessing
  "jsonpickle",      # For converting arbitrary objects to JSON
  "pyyaml",          # For loading/saving YAML
  "packaging",       # For parsing versions
  "setuptools",      # For versioning information not provided by importlib
  "gitpython",       # Git version information
  "jellyfish",       # For fuzzy string matching
  "tqdm",            # For flexible progress bars 
  "python-dateutil", # For more date utilities
  "memory_profiler", # For the memory profiler
  "line_profiler",   # For the performance profiler
  "colorama; platform_system == 'Windows'" # For colored text output -- only install on Windows
]

[project.urls]
"Website" = "https://sciris.org"
"Source" = "https://github.com/sciris/sciris/"

[tool.setuptools.packages.find]
where = ["."]
include = ["sciris*"]

[tool.setuptools.package-data]
sciris = ["*.ipynb", "*.rst", "*.csv"]

[tool.setuptools.dynamic]
version = {attr = "sciris.sc_version.__version__"}
